# OsciWriting

./: .env.example  .gitignore  PRD.md  PRD_tracerazor_v0.3.1.md  PRD_v3.md  PRD_v4.md  README.md  pyproject.toml
.claude/: settings.json
docs/: cost_model.md  cost_model_v3.md  decision_log.md  findings.md  findings_v3.md  findings_v4.md  prior_art.md
docs/aee/: README.md  findings.md
notebooks/: 00_cost_model.ipynb  01_data_exploration.ipynb  02_filter_calibration.ipynb  03_pilot_run.ipynb  04_results_inspection.ipynb
scripts/: audit_cache_determinism.py  audit_extractor.py  calibrate_cost_model.py  calibrate_regime_cutoffs.py  run_entropy_analysis.py  sweep_ngram_order.py  test_entropy_cacheability_correlation.py
src/agentpathrouter/: __init__.py  cost.py  data_sources.py  entropy.py  entropy_estimator.py  middleware.py  path_cache.py  speculative.py  synthetic.py  taxonomy.py
src/redundancy/: __init__.py  audit.py  baseline.py  cluster.py  config.py  cost_model.py  cost_model_v3.py  data.py  dedup.py  embed.py  filters.py  judge.py  metrics.py  multi_turn.py  personal_prefetch.py  pipeline.py  prefetch.py  reduce.py  report.py  user_history.py
tests/: test_agentpathrouter_cost.py  test_agentpathrouter_data_sources.py  test_agentpathrouter_determinism.py  test_agentpathrouter_entropy.py  test_agentpathrouter_router.py  test_agentpathrouter_routing.py  test_agentpathrouter_taxonomy.py  test_audit.py  test_cluster.py  test_cost_model.py  test_dedup.py  test_filters.py  test_metrics.py  test_multi_turn.py
